@@ -7,6 +7,8 @@ Revision history for Fatal
 	  in lock-step.
 
 	* Started 5.8 support
+		* Removed dependencies on 5.10 'use feature'.
+		* Removed dependencies on 5.10 fieldhashes.
 
 1.10_03 Fri Jun 13 11:04:17 AUSEST 2008
 	* Updated backwards compatibility tests to work on
